tests/test_scope/good/sub_scope.catala
## Article

```catala
new scope A:
  param a content int
  param b content bool
  param a_base content int

new scope B:
  param a content int
  param b content bool
  param scopeA scope A
  param scopeAbis scope A

scope A:
  def a_base := 1
  def a := -1
  def b := a > 0

scope B:
  def a := 42
  def b := scopeA.b
  def scopeA.a [| a > 0 |] := scopeAbis.a_base
```
